objects/Known_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Affected_version__c</fullName>
        <formula>TEXT ( Front_Back__c )+&quot; &quot;+TEXT( Major__c )+TEXT( Minor__c )+TEXT( Patch__c )+&quot; &quot;+TEXT( HigherLower__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affected version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ETA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Back__c</fullName>
        <label>Front-Back</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Backend All</fullName>
                </value>
                <value>
                    <fullName>Backend Heroku US</fullName>
                </value>
                <value>
                    <fullName>Backend Heroku EU</fullName>
                </value>
                <value>
                    <fullName>Backend CopaGCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HigherLower__c</fullName>
        <label>HigherLower</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>and higher</fullName>
                </value>
                <value>
                    <fullName>and lower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_ETA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v13</fullName>
                </value>
                <value>
                    <fullName>v14</fullName>
                </value>
                <value>
                    <fullName>v15</fullName>
                </value>
                <value>
                    <fullName>v16</fullName>
                </value>
                <value>
                    <fullName>v17</fullName>
                </value>
                <value>
                    <fullName>v18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>49</fullName>
                </value>
                <value>
                    <fullName>v50</fullName>
                </value>
                <value>
                    <fullName>v51</fullName>
                </value>
                <value>
                    <fullName>v52</fullName>
                </value>
                <value>
                    <fullName>v53</fullName>
                </value>
                <value>
                    <fullName>v54</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>57</fullName>
                </value>
                <value>
                    <fullName>58</fullName>
                </value>
                <value>
                    <fullName>59</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Minor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>.10</fullName>
                </value>
                <value>
                    <fullName>.11</fullName>
                </value>
                <value>
                    <fullName>.12</fullName>
                </value>
                <value>
                    <fullName>.13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patch__c</fullName>
        <label>Patch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>.10</fullName>
                </value>
                <value>
                    <fullName>.11</fullName>
                </value>
                <value>
                    <fullName>.12</fullName>
                </value>
                <value>
                    <fullName>.13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>No Resolution</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_reproduce__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Steps to reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workaround</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Known Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KI-{00000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>